# otus-cpp

./: CMakeLists.txt  main.cpp
.github/workflows/: release.yml
2_ip_filter/: CMakeLists.txt  ip_filter.cpp  ip_filter.h  ip_pool_interaction.cpp  ip_pool_interaction.h  main.cpp
hello_world/: mail.cpp
ip_filter/: CMakeLists.txt  ip_filter.cpp  main.cpp
version_lib/: CMakeLists.txt
